# babel

./: .dockerignore  .env.docker.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
babel/: app.py  core.py  logging_cfg.py
babel/utils/: env_cfg.py  logging_cfg.py  model_cfg.py
tests/: test_core.py
